Actualizacion redes sociales

--- a/index.html
+++ b/index.html
@@ -325,8 +325,25 @@
     <section id="redes">
         <h2 data-translate="redes-titulo">Redes Sociales</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/in/daniel-fernández-balsera-03315425b"> LinkedIn</a></li>
-            <li><a href="https://github.com/BalseraDesign" target="_blank">GitHub</a></li>
+            <li style="list-style: none;"></li>
+                <a href="https://www.linkedin.com/in/daniel-fernández-balsera-03315425b" target="_blank">
+                    <iconify-icon icon="mdi:linkedin" style="vertical-align:middle; font-size:2em;"></iconify-icon>
+                    LinkedIn
+                </a>
+            </li>
+            <li style="list-style: none;"></li>
+                <a href="https://github.com/balseradeveloper" target="_blank">
+                    <iconify-icon icon="mdi:github" style="vertical-align:middle; font-size:2em;"></iconify-icon>
+                    GitHub
+                </a>
+            </li>
+            <li style="list-style: none;">
+                <a href="https://www.instagram.com/balseradeveloper/" target="_blank">
+                    <iconify-icon icon="mdi:instagram" style="vertical-align:middle; font-size:2em;"></iconify-icon>
+                    Instagram
+                </a>
+            </li>
+        </a>
         </ul>
     </section>
 
