Commit: Nuevo proyecto añadido

--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
                 <iconify-icon icon="simple-icons:mysql"></iconify-icon>
             </div>
         </div>
+
+        <div class="proyecto" style="margin-top: 20px;">
+            <h3>Tairus ERP Landing Page</h3>
+            <img src="./imgs/LandingPageTairus.PNG" alt="Tairus ERP Landing Logo" style="width: 80%; height: auto; cursor: pointer;"
+                id="logoTairusLanding" class="proyecto-img">
+            <p data-translate="proyecto-tairus-landing">Landing page promocional para Tairus ERP, diseñada para captar clientes y mostrar las funcionalidades clave del sistema.</p>
+            <p><span data-translate="fecha-estimada">Fecha estimada:</span> 01-10-2025</p>
+            <div class="iconosTecnologias">
+                <iconify-icon icon="simple-icons:react"></iconify-icon>
+                <iconify-icon icon="simple-icons:typescript"></iconify-icon>
+                <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+            </div>
+        </div>
+
     </section>
 
     <section id="tecnologias">
