--- a/index.html
+++ b/index.html
@@ -332,8 +332,12 @@
 
     <section id="cv">
         <h2 data-translate="cv-titulo">Descargar CV</h2>
-        <p data-translate="cv-descripcion">Puedes descargar mi CV actualizado en formato PDF desde aquí:</p>
+        <p>Puedes descargar mi CV en español actualizado en formato PDF desde aquí:</p>
         <a href="./docs/CVDanielFernándezBalsera.pdf" download data-translate="descargar-cv">Descargar CV</a>
+        <br><br>
+        <h2 data-translate="cv-titulo-en">Download CV (English)</h2>
+        <p>You can download my updated CV in English (PDF) from here:</p>
+        <a href="./docs/CVDanielFernándezBalseraEnglish.pdf" download data-translate="descargar-cv-en">Download CV</a>
     </section>
 
     <section id="redes">
