--- a/index.html
+++ b/index.html
@@ -153,53 +153,63 @@
                 </div>
                 <a href="https://frikema-psi.vercel.app/" target="_blank" data-translate="ver-proyecto">Ver proyecto</a>
             </div>
-        </article>
-    </section>
+            <div class="proyecto" style="margin-top: 20px;">
 
-    <section id="proyectos-en-progreso">
-        <h2 data-translate="proyectos-progreso">Proyectos en progreso</h2>
-        <article class="proyectos-grid" style="display: flex; justify-content: center; align-items: center;">
-            <div class="proyecto" style="text-align: center;">
-                <h3>BalserAI</h3>
-                <img src="./imgs/BETABalseraAI.PNG" alt="BalserAI Logo"
-                    style="width: 60%; height: auto; cursor: pointer;" id="logoProyecto" class="proyecto-img">
-                <p data-translate="proyecto-balserai">BalserAI será una inteligencia artificial...</p>
-                <p><span data-translate="fecha-estimada">Fecha estimada:</span> 8-08-2025</p>
+                <img src="./imgs/LandingPageTairus.PNG" alt="Tairus ERP Landing Logo"
+                    style="width: 80%; height: auto; cursor: pointer;" id="logoTairusLanding" class="proyecto-img">
+                <h3>Tairus ERP Landing Page</h3>
+                <p data-translate="proyecto-tairus-landing">Landing page promocional para Tairus ERP, diseñada para
+                    captar clientes y mostrar las funcionalidades clave del sistema.</p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:react"></iconify-icon>
+                    <iconify-icon icon="simple-icons:typescript"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+
+                </div>
+            </div>
+
+            <div class="proyecto" style="margin-top: 20px;">
+
+                <img src="./imgs/TairusERP.PNG" alt="Tairus ERP Logo" style="width: 80%; height: auto; cursor: pointer;"
+                    id="logoTairusERP" class="proyecto-img">
+                <h3>Tairus ERP</h3>
+                <p data-translate="proyecto-tairus">Tairus ERP es un sistema de gestión empresarial integral...</p>
                 <div class="iconosTecnologias">
                     <iconify-icon icon="simple-icons:typescript"></iconify-icon>
                     <iconify-icon icon="simple-icons:react"></iconify-icon>
-                    <iconify-icon icon="simple-icons:css3"></iconify-icon>
-                    <iconify-icon icon="simple-icons:tensorflow"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+                    <iconify-icon icon="simple-icons:mysql"></iconify-icon>
                 </div>
             </div>
         </article>
 
-        <div class="proyecto" style="margin-top: 20px;">
-            <h3>Tairus ERP</h3>
-            <img src="./imgs/TairusERP.PNG" alt="Tairus ERP Logo" style="width: 80%; height: auto; cursor: pointer;"
-                id="logoTairusERP" class="proyecto-img">
-            <p data-translate="proyecto-tairus">Tairus ERP es un sistema de gestión empresarial integral...</p>
-            <p><span data-translate="fecha-estimada">Fecha estimada:</span> 15-12-2025</p>
-            <div class="iconosTecnologias">
-                <iconify-icon icon="simple-icons:typescript"></iconify-icon>
-                <iconify-icon icon="simple-icons:react"></iconify-icon>
-                <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
-                <iconify-icon icon="simple-icons:mysql"></iconify-icon>
-            </div>
-        </div>
+    </section>
 
-        <div class="proyecto" style="margin-top: 20px;">
-            <h3>Tairus ERP Landing Page</h3>
-            <img src="./imgs/LandingPageTairus.PNG" alt="Tairus ERP Landing Logo" style="width: 80%; height: auto; cursor: pointer;"
-                id="logoTairusLanding" class="proyecto-img">
-            <p data-translate="proyecto-tairus-landing">Landing page promocional para Tairus ERP, diseñada para captar clientes y mostrar las funcionalidades clave del sistema.</p>
-            <p><span data-translate="fecha-estimada">Fecha estimada:</span> 01-10-2025</p>
-            <div class="iconosTecnologias">
-                <iconify-icon icon="simple-icons:react"></iconify-icon>
-                <iconify-icon icon="simple-icons:typescript"></iconify-icon>
-                <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+    <section id="proyectos-en-progreso">
+        <h2 data-translate="proyectos-progreso">Proyectos en progreso</h2>
+
+        <article class="proyectos-grid">
+            <div class="proyecto">
+                <img src="./imgs/FriendZoneAI.PNG" alt="FriendZoneAI App"
+                    style="width: 80%; height: auto; cursor: pointer;" class="proyecto-img">
+                <h3>FriendZoneAI</h3>
+                <p data-translate="proyecto-friendzoneai">
+                    FriendZoneAI es una app para conocer gente con tus mismos gustos en tu zona. Incluye tareas
+                    personalizadas que la IA te ayuda a realizar para mejorar tu perfil y facilitar nuevas conexiones.
+                </p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:react"></iconify-icon>
+                    <iconify-icon icon="simple-icons:javascript"></iconify-icon>
+                    <iconify-icon icon="simple-icons:openai"></iconify-icon>
+                    <iconify-icon icon="simple-icons:firebase"></iconify-icon>
+                </div>
+                <a href="#" target="_blank" style="pointer-events: none; opacity: 0.6; cursor: not-allowed;">
+                    <span data-translate="proyecto-en-progreso">En desarrollo</span>
+                </a>
             </div>
-        </div>
+        </article>
+
+
 
     </section>
 
@@ -344,16 +354,16 @@
         <h2 data-translate="redes-titulo">Redes Sociales</h2>
         <ul>
             <li style="list-style: none;"></li>
-                <a href="https://www.linkedin.com/in/daniel-fernández-balsera-03315425b" target="_blank">
-                    <iconify-icon icon="mdi:linkedin" style="vertical-align:middle; font-size:2em;"></iconify-icon>
-                    LinkedIn
-                </a>
+            <a href="https://www.linkedin.com/in/daniel-fernández-balsera-03315425b" target="_blank">
+                <iconify-icon icon="mdi:linkedin" style="vertical-align:middle; font-size:2em;"></iconify-icon>
+                LinkedIn
+            </a>
             </li>
             <li style="list-style: none;"></li>
-                <a href="https://github.com/balseradeveloper" target="_blank">
-                    <iconify-icon icon="mdi:github" style="vertical-align:middle; font-size:2em;"></iconify-icon>
-                    GitHub
-                </a>
+            <a href="https://github.com/balseradeveloper" target="_blank">
+                <iconify-icon icon="mdi:github" style="vertical-align:middle; font-size:2em;"></iconify-icon>
+                GitHub
+            </a>
             </li>
             <li style="list-style: none;">
                 <a href="https://www.instagram.com/balseradeveloper/" target="_blank">
@@ -361,7 +371,7 @@
                     Instagram
                 </a>
             </li>
-        </a>
+            </a>
         </ul>
     </section>
 
@@ -371,17 +381,17 @@
                 href="mailto:baseradesign@gmail.com">balseradeveloper@gmail.com</a></p>
         <p><span data-translate="telefono">Teléfono: </span><a href="tel:+123456789">+34 690 99 50 89</a></p>
     </section>
-<section id="minijuego">
-    <h2 data-translate="minijuego">FlappyJS</h2>
-    <div style="width: 100%; display: flex; justify-content: center; padding: 1rem 0;">
-        <canvas id="flappyCanvas" width="320" height="400"></canvas>
-    </div>
-    <div id="gameOver">
-        <h3>💥 Game Over</h3>
-        <p>¿Intentamos de nuevo?</p>
-        <button onclick="restartGame()">Reiniciar</button>
-    </div>
-</section>
+    <section id="minijuego">
+        <h2 data-translate="minijuego">FlappyJS</h2>
+        <div style="width: 100%; display: flex; justify-content: center; padding: 1rem 0;">
+            <canvas id="flappyCanvas" width="320" height="400"></canvas>
+        </div>
+        <div id="gameOver">
+            <h3>💥 Game Over</h3>
+            <p>¿Intentamos de nuevo?</p>
+            <button onclick="restartGame()">Reiniciar</button>
+        </div>
+    </section>
 
     <script src="./js/scrollReveal.js"></script>
     <div id="particles-js"></div>
