--- a/index.html
+++ b/index.html
@@ -124,6 +124,21 @@
                     data-translate="mantenimiento">Actualmente en mantenimiento y mejoras</span>
             </div>
 
+            <!-- NUEVO PROYECTO: Web de Conciertos -->
+            <div class="proyecto">
+                <img src="./imgs/aimusic.PNG" alt="Proyecto 6" style="width: 80%; height: 165px; cursor: pointer;"
+                    class="proyecto-img">
+                <h3>AI MUSIC</h3>
+                <p data-translate="proyecto-conciertos">Web de conciertos desarrollada con tecnologías web puras...</p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:html5"></iconify-icon>
+                    <iconify-icon icon="simple-icons:css3"></iconify-icon>
+                    <iconify-icon icon="simple-icons:javascript"></iconify-icon>
+                </div>
+                <a href="https://concert-events-demo.vercel.app/" target="_blank" data-translate="ver-proyecto">Ver
+                    proyecto</a>
+            </div>
+
             <div class="proyecto">
                 <img src="./imgs/Capilearn.PNG" alt="Proyecto 4" style="width: 80%; height: 165px; cursor: pointer;"
                     class="proyecto-img">
