--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <iconify-icon icon="simple-icons:css3"></iconify-icon>
                     <iconify-icon icon="simple-icons:javascript"></iconify-icon>
                 </div>
-                <a href="https://concert-events-demo.vercel.app/" target="_blank" data-translate="ver-proyecto">Ver
+                <a href="https://aieventos.danielbalsera.es/" target="_blank" data-translate="ver-proyecto">Ver
                     proyecto</a>
             </div>
 
