--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Daniel Fernández Balsera" />
+    <meta property="og:description"
+        content="Soy un diseñador web y programador apasionado por crear experiencias digitales modernas..." />
+    <meta property="og:image" content="./imgs/MiPortfolio.PNG" />
+    <meta property="og:url" content="https://danielbalsera.es" />
     <title>Daniel Fernández Balsera</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap"
         rel="stylesheet" />
