--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="Soy un diseñador web y programador apasionado por crear experiencias digitales modernas..." />
     <meta property="og:image" content="./imgs/MiPortfolio.PNG" />
     <meta property="og:url" content="https://danielbalsera.es" />
+    <link rel="icon" type="image/png" href="./imgs/Icono.png" />
     <title>Daniel Fernández Balsera</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap"
         rel="stylesheet" />
