Mejoras iconos portfolio

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="#tecnologias" data-translate="tecnologias">Tecnologías</a></li>
                 <li><a href="#experiencia" data-translate="experiencia">Experiencia</a></li>
                 <li><a href="#estudios" data-translate="estudios">Estudios</a></li>
+                <li><a href="#idiomas" data-translate="idiomas">Idiomas</a></li>
                 <li><a href="#personal" data-translate="personal">Biografía</a></li>
                 <li><a href="#cv" data-translate="cv">CV</a></li>
                 <li><a href="#redes" data-translate="redes">Redes</a></li>
@@ -184,7 +185,7 @@
                 <div class="iconosTecnologias">
                     <iconify-icon icon="simple-icons:react"></iconify-icon>
                     <iconify-icon icon="simple-icons:typescript"></iconify-icon>
-                    <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-sass"></iconify-icon>
 
                 </div>
             </div>
@@ -198,7 +199,7 @@
                 <div class="iconosTecnologias">
                     <iconify-icon icon="simple-icons:typescript"></iconify-icon>
                     <iconify-icon icon="simple-icons:react"></iconify-icon>
-                    <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-sass"></iconify-icon>
                     <iconify-icon icon="simple-icons:mysql"></iconify-icon>
                 </div>
             </div>
@@ -222,7 +223,7 @@
                     <iconify-icon icon="simple-icons:react"></iconify-icon>
                     <iconify-icon icon="simple-icons:javascript"></iconify-icon>
                     <iconify-icon icon="simple-icons:openai"></iconify-icon>
-                    <iconify-icon icon="simple-icons:firebase"></iconify-icon>
+                    <iconify-icon icon="simple-icons:supabase"></iconify-icon>
                 </div>
                 <a href="#" target="_blank" style="pointer-events: none; opacity: 0.6; cursor: not-allowed;">
                     <span data-translate="proyecto-en-progreso">En desarrollo</span>
@@ -236,22 +237,108 @@
 
     <section id="tecnologias">
         <h2 data-translate="tecnologias-titulo">Tecnologías / Habilidades Destacadas</h2>
-        <h3 data-translate="profesionales">Profesionales</h3>
-        <div class="skills-list professional">
-            <span class="skill-tag">WordPress (Avada)</span>
-            <span class="skill-tag">WooCommerce</span>
-            <span class="skill-tag">HTML5</span>
-            <span class="skill-tag">CSS3</span>
-            <span class="skill-tag">Javascript</span>
-            <span class="skill-tag">Consultoría ERP</span>
-            <span class="skill-tag">Odoo</span>
-            <span class="skill-tag">php</span>
-            <span class="skill-tag">React</span>
-            <span class="skill-tag">Typescript</span>
-            <span class="skill-tag">AI Consulting</span>
+        
+        <h3 data-translate="lenguajes">Lenguajes</h3>
+        <div class="tech-icons-grid">
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>
+                <span>HTML5</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-css"></iconify-icon>
+                <span>CSS3</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-js-official"></iconify-icon>
+                <span>JavaScript</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-php3"></iconify-icon>
+                <span>PHP</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="simple-icons:dotnet"></iconify-icon>
+                <span>.NET</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-csharp2"></iconify-icon>
+                <span>C#</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-python"></iconify-icon>
+                <span>Python</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-mysql"></iconify-icon>
+                <span>MySQL</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-scss2"></iconify-icon>
+                <span>SCSS</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-java"></iconify-icon>
+                <span>Java</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="simple-icons:visualbasic"></iconify-icon>
+                <span>Visual Basic</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-cpp3"></iconify-icon>
+                <span>C++</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-typescript-official"></iconify-icon>
+                <span>TypeScript</span>
+            </div>
         </div>
 
-        <h3 data-translate="personales">Personales</h3>
+        <h3 data-translate="tecnologias-profesionales">Tecnologías</h3>
+        <div class="tech-icons-grid">
+            <div class="tech-item">
+                <iconify-icon icon="simple-icons:odoo"></iconify-icon>
+                <span data-translate="erp-consulting">ERP Consulting (Odoo)</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="mdi:web"></iconify-icon>
+                <span data-translate="web-services">Web Services</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="mdi:server-network"></iconify-icon>
+                <span data-translate="system-admin">System Administration</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="vscode-icons:file-type-docker2"></iconify-icon>
+                <span data-translate="container-deployment">Container Deployment</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="mdi:database"></iconify-icon>
+                <span data-translate="databases">Databases</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="mdi:code-braces"></iconify-icon>
+                <span>MVC</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="mdi:robot"></iconify-icon>
+                <span data-translate="ai-testing">Advanced AI Testing</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="skill-icons:wordpress"></iconify-icon>
+                <span>WordPress</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="simple-icons:woocommerce"></iconify-icon>
+                <span>WooCommerce</span>
+            </div>
+            <div class="tech-item">
+                <iconify-icon icon="simple-icons:supabase"></iconify-icon>
+                <span>Supabase</span>
+            </div>
+        </div>
+
+        <h3 data-translate="personales">Habilidades Personales</h3>
         <div class="skills-list personal">
             <span class="skill-tag" data-translate="trabajo-equipo">Trabajo en equipo</span>
             <span class="skill-tag" data-translate="apoyo-companeros">Apoyo a compañeros</span>
@@ -336,6 +423,20 @@
             </li>
             <li data-translate="estudio-4">2017–2019 · Sistemas Microinformáticos y Redes · CES Lope de Vega</li>
         </ul>
+    </section>
+
+    <section id="idiomas">
+        <h2 data-translate="idiomas-titulo">Idiomas</h2>
+        <div class="language-levels">
+            <div class="language-item">
+                <iconify-icon icon="emojione-v1:flag-for-spain"></iconify-icon>
+                <span data-translate="espanol-nivel">Español: C2 (Nativo)</span>
+            </div>
+            <div class="language-item">
+                <iconify-icon icon="emojione-v1:flag-for-united-kingdom"></iconify-icon>
+                <span data-translate="ingles-nivel">Inglés: B1 (Intermedio)</span>
+            </div>
+        </div>
     </section>
 
     <section id="personal">
