--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <section id="tecnologias">
         <h2 data-translate="tecnologias-titulo">Tecnologías / Habilidades Destacadas</h2>
         
-        <h3 data-translate="lenguajes">Lenguajes</h3>
+        <h3 data-translate="lenguajes">Lenguajes</h3><br>
         <div class="tech-icons-grid">
             <div class="tech-item">
                 <iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>
@@ -294,7 +294,7 @@
             </div>
         </div>
 
-        <h3 data-translate="tecnologias-profesionales">Tecnologías</h3>
+        <h3 data-translate="tecnologias-profesionales">Tecnologías</h3><br>
         <div class="tech-icons-grid">
             <div class="tech-item">
                 <iconify-icon icon="simple-icons:odoo"></iconify-icon>
