--- a/index.html
+++ b/index.html
@@ -247,6 +247,11 @@
                 <span data-translate="erp-consulting">ERP Consulting (Odoo)</span>
             </div>
             <div class="tech-item">
+                <iconify-icon icon="simple-icons:react"></iconify-icon>
+                <span>React</span>
+            </div>
+
+            <div class="tech-item">
                 <iconify-icon icon="mdi:web"></iconify-icon>
                 <span data-translate="web-services">Web Services</span>
             </div>
