Nuevo proyecto subido

--- a/index.html
+++ b/index.html
@@ -229,6 +229,19 @@
                     <span data-translate="proyecto-en-progreso">En desarrollo</span>
                 </a>
             </div>
+            <div class="proyecto">
+                <img src="./imgs/NordicAgency.PNG" alt="Nordic Dreams" style="width: 80%; height: auto; cursor: pointer;" class="proyecto-img">
+                <h3>Nordic Dreams</h3>
+                <p data-translate="proyecto-nordicdreams">Nordic Dreams es una web para una agencia turística de Noruega, desarrollada con HTML5, CSS3 y JavaScript Vanilla. Incluye diseño responsive, galería de destinos, formulario de contacto y recomendaciones personalizadas para viajeros.</p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-css"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-js-official"></iconify-icon>
+                </div>
+                <a href="#" target="_blank" style="pointer-events: none; opacity: 0.6; cursor: not-allowed;">
+                    <span data-translate="proyecto-en-progreso">En desarrollo</span>
+                </a>
+            </div>
         </article>
 
 
