Actualizacion Proyecto Nuevo

--- a/index.html
+++ b/index.html
@@ -175,6 +175,27 @@
                 </div>
                 <a href="https://frikema-psi.vercel.app/" target="_blank" data-translate="ver-proyecto">Ver proyecto</a>
             </div>
+
+
+            <div class="proyecto">
+                <img src="./imgs/BusinessAnalyst.png" alt="Business Analytics Dolibarr"
+                    style="width: 80%; height: auto; cursor: pointer;" class="proyecto-img">
+                <h3>Módulo Business Analytics (Dolibarr)</h3>
+                <p data-translate="proyecto-businessanalytics">Módulo desarrollado para Dolibarr con PHP, HTML, CSS,
+                    JavaScript y SQL. Permite registrar y visualizar el número de clientes nuevos, productos, facturas
+                    pendientes y ventas totales, mostrando gráficos interactivos para cada métrica y facilitando el
+                    análisis de negocio en tiempo real.</p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="vscode-icons:file-type-php3"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-css"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-js-official"></iconify-icon>
+                    <iconify-icon icon="vscode-icons:file-type-sql"></iconify-icon>
+                </div>
+                <a href="#" target="_blank" data-translate="ver-proyecto">Ver proyecto</a>
+            </div>
+
+
             <div class="proyecto" style="margin-top: 20px;">
 
                 <img src="./imgs/LandingPageTairus.PNG" alt="Tairus ERP Landing Logo"
@@ -230,9 +251,12 @@
                 </a>
             </div>
             <div class="proyecto">
-                <img src="./imgs/NordicAgency.PNG" alt="Nordic Dreams" style="width: 80%; height: auto; cursor: pointer;" class="proyecto-img">
+                <img src="./imgs/NordicAgency.PNG" alt="Nordic Dreams"
+                    style="width: 80%; height: auto; cursor: pointer;" class="proyecto-img">
                 <h3>Nordic Dreams</h3>
-                <p data-translate="proyecto-nordicdreams">Nordic Dreams es una web para una agencia turística de Noruega, desarrollada con HTML5, CSS3 y JavaScript Vanilla. Incluye diseño responsive, galería de destinos, formulario de contacto y recomendaciones personalizadas para viajeros.</p>
+                <p data-translate="proyecto-nordicdreams">Nordic Dreams es una web para una agencia turística de
+                    Noruega, desarrollada con HTML5, CSS3 y JavaScript Vanilla. Incluye diseño responsive, galería de
+                    destinos, formulario de contacto y recomendaciones personalizadas para viajeros.</p>
                 <div class="iconosTecnologias">
                     <iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>
                     <iconify-icon icon="vscode-icons:file-type-css"></iconify-icon>
@@ -242,6 +266,7 @@
                     <span data-translate="proyecto-en-progreso">En desarrollo</span>
                 </a>
             </div>
+
         </article>
 
 
